client/src/components/css/mapCard.css
#card {
  width: 250px;
  min-width: 168px;
  padding-bottom: 1%;
  display: inline-block;
  margin-top: 1%;
}

#card:hover{
    border: 1px solid #228be6;
}

#mapTitle {
  padding-top: 10%;
}

#mapDescription {
  padding-top: 5%;
}

#ellipses {
  margin-left: auto;
  margin-right: 1%;
}

